--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Welcome to my personal learning repo where I document my journey with:",
   "main": "index.js",
   "scripts": {
-    "start": "node app/index.js"
+    "start": "node app/redux-toolkit/index.js"
   },
   "repository": {
     "type": "git",
