--- a/.gitignore
+++ b/.gitignore
@@ -1,26 +1,70 @@
+# Dependency directories
+node_modules/
+jspm_packages/
+
+# Build directories
+dist/
+build/
+out/
+
 # Logs
-logs
+logs/
 *.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-pnpm-debug.log*
-lerna-debug.log*
+
+# Environment files
 .env
 .env.local
+.env.development.local
+.env.test.local
+.env.production.local
 
-node_modules
-dist
-dist-ssr
-*.local
-
-# Editor directories and files
-.vscode/*
-!.vscode/extensions.json
-.idea
+# OS-specific files
 .DS_Store
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
-*.sw?
+Thumbs.db
+
+# IDEs and editors
+.vscode/
+.idea/
+*.sublime-workspace
+*.sublime-project
+
+# TypeScript
+*.tsbuildinfo
+
+# Testing
+coverage/
+.nyc_output/
+
+# Next.js
+.next/
+out/
+
+# Nuxt.js
+.nuxt/
+static/
+
+# Svelte
+.svelte-kit/
+
+# Angular
+.angular/
+
+# Misc
+*.tgz
+*.swp
+*.swo
+
+# Storybook
+storybook-static/
+
+# Firebase
+.firebase/
+.firebaserc
+
+# Optional lockfiles (uncomment if needed)
+# package-lock.json
+# yarn.lock
+# pnpm-lock.yaml
