--- a/package.json
+++ b/package.json
@@ -1,38 +1,25 @@
 {
   "name": "bit-by-bit",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "lint": "eslint .",
-    "preview": "vite preview"
+    "start": "ts-node-dev --respawn ./src/index.ts",
+    "build": "tsc"
   },
-  "dependencies": {
-    "@reduxjs/toolkit": "^2.8.2",
-    "@tailwindcss/vite": "^4.1.11",
-    "axios": "^1.10.0",
-    "clsx": "^2.1.1",
-    "lucide-react": "^0.525.0",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
-    "react-redux": "^9.2.0",
-    "react-router": "^7.6.3",
-    "redux": "^5.0.1",
-    "redux-thunk": "^3.1.0",
-    "tailwind-merge": "^3.3.1",
-    "tailwindcss": "^4.1.11"
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/eh-munna/bit-by-bit.git"
   },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "type": "commonjs",
+  "bugs": {
+    "url": "https://github.com/eh-munna/bit-by-bit/issues"
+  },
+  "homepage": "https://github.com/eh-munna/bit-by-bit#readme",
   "devDependencies": {
-    "@eslint/js": "^9.29.0",
-    "@types/react": "^19.1.8",
-    "@types/react-dom": "^19.1.6",
-    "@vitejs/plugin-react": "^4.5.2",
-    "eslint": "^9.29.0",
-    "eslint-plugin-react-hooks": "^5.2.0",
-    "eslint-plugin-react-refresh": "^0.4.20",
-    "globals": "^16.2.0",
-    "vite": "^7.0.0"
+    "ts-node-dev": "^2.0.0"
   }
 }
